<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/grid_view_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_grid_view_test"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="buttonGridViewTest"/>
    <Button
            android:text="@string/fragment_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button_fragment_test" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_grid_view_test"
    />
    <Button
            android:text="@string/search_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button_search_test" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_fragment_test" android:onClick="buttonSearchTest"/>
    <Button
            android:text="@string/csv_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button_csv_test" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_search_test"/>
</android.support.constraint.ConstraintLayout>