<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".T4CsvActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/t4LinearLayout"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp">
        <Button
                android:text="@string/start_station_service1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button_start_service1"/>
        <Button
                android:text="@string/bind_station_service2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button_bind_service2"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button_get_loc_service2"
                android:text="@string/get_loc_station_service2"/>
        <TextView
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/text_view_station_list"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>